--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -13,6 +13,7 @@ body {
     padding: 50px 60px;
     border: solid #ddd;
     border-width: 0 1px 1px 1px;
+    position: relative;
 }
 
 #main h1 {
@@ -69,7 +70,7 @@ form input[type=text] {
     font-weight: 800;
 }
 
-.chat:hover {
+.message:hover {
     background-color: #ddd;
 }
 
@@ -81,4 +82,29 @@ form input[type=text] {
 
 .spinner img {
     padding: 10px;
+}
+
+.message {
+    padding: 30px 0 0 0;
+    width: 500px;
+    border-bottom : 1px solid black;
+    background-color: white;
+    /*text-align: center;*/
+}
+.user {
+    width: 280px;
+    color: blue;
+    font-size: 20px;
+    display: block;
+    float: left;
+}
+
+.date {
+    width: 220px;
+    display: block;
+    float: left;
+    font-style: sans-serif;
+}
+.date p {
+    font-size: 10pt;
 }
